--- a/package.json
+++ b/package.json
@@ -14,21 +14,19 @@
     "deploy:prd": "yarn run build && th deploy-automation --env PRD"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.215",
-    "@swc/jest": "^0.2.21",
     "@tybys/cross-zip": "^3.1.0",
     "@types/aws-lambda": "^8.10.101",
-    "@types/jest": "^28.1.5",
+    "@types/jest": "^29.5.5",
     "esbuild": "^0.14.49",
     "esbuild-plugin-copy": "^1.3.0",
     "glob": "^8.0.3",
-    "jest": "^28.1.3",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "make-coverage-badge": "^1.2.0",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@tunnelhub/sdk": "^1.0.115"
+    "@tunnelhub/sdk": "^1.1.1"
   }
 }
